# DelOptim

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
examples/: delmesher_demo.ipynb
include/: cham.cpp  cham.h  hand_optimized_predicates.hpp  implicit_point.h  implicit_point.hpp  indirect_predicates.h  indirect_predicates.hpp  numerics.h  numerics.hpp  tetgen.h  tetmesh.h
input_models/: 110907.off  1130082.off  1207651.off  1558739.off  227616.off  343542.off  350273.off  39641.off  423818.off  472100.off  48416.off  49529.off  56099.off  58007.off  61242.off  62572.off  67924.off  72669.off  80363.off  85110.off  small_lfs.off  small_lfs_defeatured.off
python/delmesher/: __init__.py
python/src/: delmesher_ext.cpp
scripts/: build_python_venv.sh  smoke_test.py
src/: PLC.hpp  cdt.h  delaunay.hpp  fp_geometry.h  giftWrap.hpp  inputPLC.h  interfaces.h  logger.h  main.cpp  optim_cdt.hpp  outputMesh.h  predicates.cxx  tetgen.cxx  tetgen_interface.cpp
tests/: CMakeLists.txt  test_delmesher_cli.cpp
tests/python/: test_delmesher.py
