[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "delmesher"
version = "1.0.0"
description = "Robust tetrahedral meshing via surface chamfering (SIGGRAPH 2026)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "Lorenzo Diazzi" },
    { name = "Jiacheng Dai" },
    { name = "Daniele Panozzo" },
    { name = "Marco Attene" },
]
keywords = ["mesh", "tetrahedral", "meshing", "delaunay", "geometry", "CDT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/MarcoAttene/DelOptim"
Paper = "https://doi.org/10.1145/3811395"

[project.optional-dependencies]
test = ["pytest>=7.0"]
notebook = ["pyvista>=0.43", "jupyterlab"]

[tool.scikit-build]
# Drive the existing top-level CMakeLists.txt: build only the Python module,
# skipping the CLI executable and the Catch2 test suite (no network needed).
minimum-version = "0.10"
cmake.version = ">=3.18"
cmake.build-type = "Release"
build-dir = "build/skbuild/{wheel_tag}"
wheel.packages = ["python/delmesher"]
sdist.include = ["python/delmesher/_version.py"]

[tool.scikit-build.cmake.define]
DELMESHER_BUILD_PYTHON = "ON"
DELMESHER_BUILD_CLI = "OFF"
DELMESHER_BUILD_TESTS = "OFF"
# Ship the LGPL-only variant in the wheels (disables USE_MAROTS_METHOD).
LGPL = "ON"

# Stamp the wheel/sdist version into the importable package.
[[tool.scikit-build.generate]]
path = "delmesher/_version.py"
template = '''
__version__ = "${version}"
'''

# ---- Binary wheels (cibuildwheel) -------------------------------------------
# Drives the per-platform wheel builds in .github/workflows/wheels.yml. The set
# of Python versions is selected there (via CIBW_BUILD) so PRs can build a
# single version while release builds cover the full range.
[tool.cibuildwheel]
build-frontend = "build"
# nanobind has no PyPy support; musllinux (Alpine) is omitted to keep the matrix
# small. Drop "*-musllinux*" here to add it.
skip = ["pp*", "*-musllinux*"]
# Run the smoke test against each built wheel in an isolated environment.
test-requires = ["numpy"]
test-command = "python {project}/scripts/smoke_test.py {project}/input_models/boeing_part.off"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
# The code is C++20; manylinux2014's GCC 10 is too old, so use the 2_28 image
# (GCC 12+). x86_64 builds don't fetch SIMDe (that path is ARM-only).
manylinux-x86-64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
# Build whatever the runner is: arm64 on macos-14, x86_64 on macos-13.
archs = ["native"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
